VerificationActivity & SignUpActivity update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".VerificationActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".MainOnboardingActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -19,15 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MeetingApplicationActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="야미구">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
