--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name=".GlobalApplication"
+        android:name=".Activity.GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="야미구"
@@ -15,32 +15,32 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
-        <activity android:name=".TicketActivity"></activity>
-        <activity android:name=".TermsActivity" />
-        <activity android:name=".PrivacyActivity" />
-        <activity android:name=".SettingActivity" />
-        <activity android:name=".AllianceListActivity" />
-        <activity android:name=".FAQActivity" />
-        <activity android:name=".GuideActivity" />
-        <activity android:name=".WhatisYamiguActivity" />
-        <activity android:name=".CertificationWActivity"></activity>
-        <activity android:name=".CertificationUActivity"></activity>
+        <activity android:name=".Activity.TicketActivity"></activity>
+        <activity android:name=".Activity.TermsActivity" />
+        <activity android:name=".Activity.PrivacyActivity" />
+        <activity android:name=".Activity.SettingActivity" />
+        <activity android:name=".Activity.AllianceListActivity" />
+        <activity android:name=".Activity.FAQActivity" />
+        <activity android:name=".Activity.GuideActivity" />
+        <activity android:name=".Activity.WhatisYamiguActivity" />
+        <activity android:name=".Activity.CertificationWActivity"></activity>
+        <activity android:name=".Activity.CertificationUActivity"></activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".Activity.SignUpActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".VerificationActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainOnboardingActivity" />
-        <activity android:name=".TicketOnboardingActivity" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".Activity.VerificationActivity" />
+        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".Activity.MainOnboardingActivity" />
+        <activity android:name=".Activity.TicketOnboardingActivity" />
+        <activity android:name=".Activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MeetingApplicationActivity"></activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activity.MeetingApplicationActivity"></activity>
+        <activity android:name=".Activity.MainActivity" />
     </application>
 
 </manifest>
