--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.yamigu.yamigu_app_manager"
+        applicationId "com.yamigu.yamigu_app"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
