--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.ChattingActivity"></activity>
+        <activity android:name=".Activity.RequestListActivity"></activity>
+        <activity android:name=".Activity.ChattingActivity" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
