--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,27 @@
     package="com.yamigu.yamigu_app">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-    <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
-     See README(https://goo.gl/l4GJaQ) for more. -->
-    <!--meta-data
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--
+ Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more.
+    -->
+    <!--
+meta-data
         android:name="com.google.firebase.messaging.default_notification_icon"
-        android:resource="@drawable/ic_static_notification" /-->
-    <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-         notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        android:resource="@drawable/ic_static_notification" /
+    -->
+    <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+         notification message. See README(https://goo.gl/6BKBk7) for more.
+    -->
     <meta-data
         android:name="com.google.firebase.messaging.default_notification_color"
         android:resource="@color/colorAccent" />
     <meta-data
         android:name="com.google.firebase.messaging.default_notification_channel_id"
         android:value="@string/default_notification_channel_id" />
+
     <application
         android:name=".Activity.GlobalApplication"
         android:allowBackup="true"
@@ -27,14 +33,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.RequestListActivity"></activity>
-        <activity android:name=".Activity.ChattingActivity"
-            android:windowSoftInputMode="adjustResize" >
+        <activity android:name=".Activity.NICEActivity"></activity>
+        <activity android:name=".Activity.RequestListActivity" />
+        <activity
+            android:name=".Activity.ChattingActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name=".ChattingActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
@@ -65,8 +75,8 @@
         </activity>
         <activity android:name=".Activity.MeetingApplicationActivity" />
         <activity android:name=".Activity.MainActivity" />
-        <service
-            android:name=".Etc.MyFirebaseMessagingService">
+
+        <service android:name=".Etc.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
