--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@ meta-data
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:fullBackupContent="false"
         android:usesCleartextTraffic="true">
         <activity android:name=".Activity.NoticeActivity"></activity>
         <activity
@@ -82,7 +83,16 @@ meta-data
             </intent-filter>
         </activity>
         <activity android:name=".Activity.MeetingApplicationActivity" />
-        <activity android:name=".Activity.MainActivity" />
+        <activity android:name=".Activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/kakao_scheme"
+                    android:host="@string/kakaolink_host" />
+            </intent-filter>
+        </activity>
 
         <service android:name=".Etc.MyFirebaseMessagingService">
             <intent-filter>
